--- a/Translations/German/text-effectUnit-change.xml
+++ b/Translations/German/text-effectUnit-change.xml
@@ -75,6 +75,10 @@
 		<Translation>Fanatiker</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_EFFECTUNIT_ZEALOT_LEADER</zType>
+		<Translation>Fanatiker (Oberhaupt)</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_EFFECTUNIT_TRACKER</zType>
 		<Translation>Fährtenleser</Translation>
 	</Entry>
