--- a/Translations/German/text-infos-change.xml
+++ b/Translations/German/text-infos-change.xml
@@ -1061,8 +1061,8 @@
 		<Translation>Kontrolliere drei sagenumwobene Städte</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_GOAL_SIX_LEGENDARY</zType>
-		<Translation>Kontrolliere sechs sagenumwobene Städte</Translation>
+		<zType>TEXT_GOAL_FIVE_LEGENDARY</zType>
+		<Translation>Kontrolliere fünf sagenumwobene Städte</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_GOAL_TWO_WONDERS</zType>
